# hygge

./: .dockerignore
.github/workflows/: docker_build_push.yml  run_tests.yml  tests.yml
backend_cafe/: pyproject.toml  run.py
backend_cafe/alembic/: env.py
backend_cafe/alembic/versions/: 59a6f99a81b9_initial.py  ad1fbd948771_initial.py
backend_cafe/app/: main.py  run.py
backend_cafe/app/api/endpoints/: health_checks.py
backend_cafe/app/core/: configs.py
backend_cafe/app/db/: database.py  models.py
backend_cafe/docker/: .dockerignore  Dockerfile  docker-compose.yml
backend_cafe/docs/: alembic.md  common_information.md  docker.md  pytest.md  technologies.md
backend_cafe/tests/api/endpoints/: test_health_check.py
docker/: Dockerfile  docker-compose.yml
