[tool.poetry]
name = "backend-cafe"
version = "0.1.0"
description = ""
authors = ["Siarhei Samoshyn <gds.grey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.2,<0.116.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"