[tool.poetry]
name = "backend-cafe"
version = "0.1.0"
description = ""
authors = ["Siarhei Samoshyn <gds.grey@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.2,<0.116.0"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"